<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/buttonB216"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:fontFamily="sans-serif-medium"
        android:text="@string/B216"
        android:textColor="#FFFFFF" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/buttonC346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#29D130"
        android:fontFamily="sans-serif-medium"
        android:text="@string/C346"
        android:textColor="#FFFFFF" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/buttonC203"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:text="@string/C203"
        android:textColor="#FFFFFF" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/buttonC206"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFC107"
        android:text="@string/C206"
        android:textColor="#FFFFFF" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/buttonC235"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#49BFE6"
        android:text="@string/C235"
        android:textColor="#FFFFFF" />

</LinearLayout>